--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     implementation("androidx.coordinatorlayout:coordinatorlayout:1.1.0")
     implementation 'com.google.android.material:material:1.0.0'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:design:23.1.0'
+    implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.8'
+
 
 
 
