--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.8'
-
-
+    implementation 'com.github.MackHartley:RoundedProgressBar:2.1.1'
 
 
     kapt "android.arch.persistence.room:compiler:1.1.1"
