--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,13 @@ dependencies {
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.8'
     implementation 'com.github.MackHartley:RoundedProgressBar:2.1.1'
+
+    implementation 'nl.dionsegijn:konfetti:1.3.2'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.moos:Material-ProgressView:1.0.6'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
 
     kapt "android.arch.persistence.room:compiler:1.1.1"
