--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pdf.reader.happiness">
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
         android:name=".core.App"
         android:allowBackup="true"
