--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 
 }
 
@@ -41,10 +42,7 @@ dependencies {
     implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
-    implementation("androidx.coordinatorlayout:coordinatorlayout:1.1.0")
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.tbuonomo:dotsindicator:4.2'
-    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.8'
     implementation 'com.github.MackHartley:RoundedProgressBar:2.1.1'
 
     implementation 'nl.dionsegijn:konfetti:1.3.2'
@@ -55,6 +53,7 @@ dependencies {
     implementation 'com.moos:Material-ProgressView:1.0.6'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'androidx.test:core-ktx:1.4.0'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
 
 
     kapt "android.arch.persistence.room:compiler:1.1.1"
