--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Happiness">
         <activity
+            android:screenOrientation="portrait"
             android:name=".presentation.DataImportingActivity"
             android:exported="true"
             android:launchMode="singleTask" />
