--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.github.gayanvoice:android-animations:1.0.2'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'io.github.everythingme:overscroll-decor-android:1.1.1'
+    implementation 'com.scwang.wave:MultiWaveHeader:1.0.0-alpha-1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
