--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
 dependencies {
     //view
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.github.gayanvoice:android-animations:1.0.2'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'io.github.everythingme:overscroll-decor-android:1.1.1'
@@ -90,5 +91,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //ADMOB
+    implementation 'com.google.android.gms:play-services-ads:20.4.0'
 
 }
