--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Happiness">
         <activity
-            android:name=".presentation.DataImportingActivity"
+            android:name=".presentation.activity.DataImportingActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".presentation.PresentationActivity"
+            android:name=".presentation.activity.PresentationActivity"
             android:exported="true"
             android:launchMode="singleTask">
             <intent-filter>
@@ -36,11 +36,11 @@
         </activity>
 
         <activity
-            android:name=".presentation.ReadingActivity"
+            android:name=".presentation.activity.ReadingActivity"
             android:exported="true"
             android:launchMode="singleTask" />
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.activity.MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
